--- a/css/mymusic.scss
+++ b/css/mymusic.scss
@@ -1,187 +1,161 @@
+body {
+  background-image: url('/images/pattern.png');
+  background-repeat: repeat;
+  background-attachment: fixed;
+  background-color: rgb(1, 30, 48);
+  }
+
+
 .navbar {
+  animation-name: skills;
+        animation-duration: 6s;
+        animation-delay: 0s;
+        animation-fill-mode: forwards;
+  z-index:9999;
+  position:fixed;
     overflow: hidden;
-    background-color: rgba(255, 255, 255, 0.726);
-    font-family: Arial, Helvetica, sans-serif;
+    background-color:transparent;
+    font-family: 'Bangers', cursive;
+    border-radius: 10px;
 }
 
 .navbar a {
     float: left;
-    font-size: 20px;
-    color: rgb(233, 14, 14);
-    background-color: black;
+    font-size: 30px;
+    background-color: rgb(12, 2, 11);
+    background-size: 200px;
+    width:128px;
+    height:43px;
     text-align: center;
-    padding: 34px 36px;
+    padding: 36px;
     text-decoration: none;
+    transition: all 200ms;
 }
 
-.dropdown5 {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown5 .dropbtn5 {
-    cursor: cell;
-    font-size: 20px;    
-    border: none;
-    outline: none;
-    color: rgb(0, 0, 0);
-    padding: 34px 36px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-
-.navbar a:hover, .dropdown5:hover .dropbtn5, .dropbtn5:focus {
-    background-color: black;
-    color:red;
-}
-
-.dropdown5-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown5-content a {
-    float: none;
-    color: rgb(255, 255, 255);
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown5-content a:hover {
-    background-color: #000000;
-}
-
-.show {
-    display: block;
+.navbar a:hover {
+    color:tan;
 }
 
 
 
-body {
-    background-color: #969494;
-    background-image: url(https://78.media.tumblr.com/88f9d95ff0b22372de6027f6b08a675e/tumblr_ooy3rafrUa1viblyvo1_500.png);
-    background-size: cover;
-  }
-
-
-
-
-
-  .dropbtn {
-    width: 200px;
-    height: 80px;
-    opacity: 1.0;
-    background-color: rgb(255, 0, 0);
-    color: white;
-    padding: 16px;
-    font-size: 20px;
-    border-style: solid;
-    border-color: rgb(26, 25, 25);
-    border-width: 5px;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown:hover .dropbtn {
-    background-color: rgb(255, 0, 0);
-    border-width: 10px;
-    opacity: 0.7;
-  }
-
-  .dropbtn2 {
-    width: 200px;
-    height: 80px;
-    opacity: 1.0;
-    background-color: rgb(72, 255, 0);
-    color: white;
-    padding: 16px;
-    font-size: 20px;
-    border-style: solid;
-    border-color: rgb(26, 25, 25);
-    border-width: 5px;
-  }
-
-  .dropdown2 {
-    position: relative;
-    display: inline-block;
-  }
+section{
   
   
+  animation-name: skills;
+        animation-duration: 6s;
+        animation-delay: 0s;
+        animation-fill-mode: forwards;
+  position:fixed;  
+  box-shadow: 4px 4px 4px rgba(245, 241, 241, 0.308);
+  background-color: rgb(12, 2, 11);
+  border-radius: 10px;
+  height: 60%;
+  float: left;
+  width:200px;
+}
+
+p{
+  animation-name: skills;
+        animation-duration: 6s;
+        animation-delay: 0s;
+        animation-fill-mode: forwards;
+  margin:0px;
+  border-bottom: 2px solid rgb(109, 107, 107);
+  font-family: 'Bangers', cursive;;
+  font-size: 18px;
+  color:rgb(221, 235, 31);
+  padding:15px;
+  transition: all .5s;
+  transition-delay: 0s;
+  transition-duration: 1s;
+}
+
+p:hover{
+  background-color:rgba(212, 48, 26, 0.966);
   
-  .dropdown2:hover .dropbtn2 {
-    background-color: rgb(72, 255, 0);
-    border-width: 10px;
-    opacity: 0.7;
-  }
+}
 
-  .dropbtn3 {
-    width: 200px;
-    height: 80px;
-    opacity: 1.0;
-    background-color: rgb(87, 2, 245);
-    color: white;
-    padding: 16px;
-    font-size: 20px;
-    border-style: solid;
-    border-color: rgb(26, 25, 25);
-    border-width: 5px;
-  }
+.block{
+  animation-name: extra;
+  animation-duration: 6s;
+  animation-delay: 0s;
+  animation-fill-mode: forwards;
+  margin:0 auto;
+  width:65%;
+  height:55px;
+  background-color: rgb(253, 197, 13);
+  box-shadow: 4px 4px 4px rgb(19, 11, 11);
+  border:1px solid black;
+  text-align:left;
+  font-family: 'Bangers', cursive;
+  font-size: 52px;
+  padding:10px;
+  border-radius: 80px;
+}
 
-  .dropdown3 {
-    position: relative;
-    display: inline-block;
-  }
+.features ul{
   
-  .dropdown3:hover .dropbtn3 {
-    background-color: rgb(87, 2, 245);
-    border-width: 10px;
-    opacity: 0.7;
+  animation-name: extra;
+  animation-duration: 6s;
+  animation-delay: 0s;
+  animation-fill-mode: forwards;
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  margin:20px;
+  margin-left:15%;
+  margin-right:15%;
+  li{
+  border-radius: 20px;
+  list-style: none;
+  width:350px;
+  height:350px;
+  padding:10px;
+  background-color: rgb(4, 6, 10);
+  border:20px double rgb(2, 165, 240);
+  margin:10px;
+  text-align:center;
   }
+}
 
-  
-  .dropbtn4 {
-    width: 200px;
-    height: 80px;
-    opacity: 1.0;
-    background-color: rgb(245, 2, 152);
-    color: white;
-    padding: 16px;
-    font-size: 20px;
-    border-style: solid;
-    border-color: rgb(26, 25, 25);
-    border-width: 5px;
+li{
+  margin:10px;
+  border-bottom: 2px solid rgb(141, 21, 21);
+  background-size: cover;
+  font-family: 'Bangers', cursive;
+  font-size:25px;
+  color:rgb(45, 241, 10);
+  padding:10px;
+  transition: all 200ms;
+}
+li:hover{
+  margin:10px;
+  border-bottom: 2px solid rgb(19, 11, 11);
+  font-family: 'Bangers', cursive;
+  padding:10px;
+  transition: all 200ms;
+}
+
+@keyframes skills{
+    from{
+      left:-150px;
+      top:0px;
+    }
+    to{
+      left:0px;
+      top:0px;
+    }
+}
+
+
+@keyframes extra{
+  from{
+    opacity: 0;
   }
-
-  .dropdown4 {
-    position: relative;
-    display: inline-block;
+  to{
+    opacity:1;
   }
-  
-  .dropdown4:hover .dropbtn4 {
-    background-color: rgb(245, 2, 152);
-    border-width: 10px;
-    opacity: 0.7;
-  }
-
-
-  h1{
-font-family: monospace;
-font-size:35px;
-color:white;
-text-shadow: 0 0 0.2em rgb(255, 6, 6), 0 0 0.2em rgb(0, 0, 0),
-    0 0 0.2em rgb(0, 0, 0)
-  }
-
-
+}
 
   /*# sourceMappingURL=mywebsite.css.map */
