--- a/css/entrance.css
+++ b/css/entrance.css
@@ -1,51 +1,131 @@
+@import url("https://fonts.googleapis.com/css?family=Bowlby+One+SC|Titillium+Web:900");
+@import url("https://fonts.googleapis.com/css?family=Heebo:700");
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:600");
 body {
-  background-color: #011e30;
-  background-image: url("/images/arcademachine.png");
+  background-color: white;
+  background-size: cover;
+  background-position-y: -190px;
   background-attachment: fixed;
-  background-size: 25%;
   background-repeat: no-repeat;
-  background-position: center;
+  margin: 0;
 }
 
-h1 {
-  z-index: 9999;
-  background-color: transparent;
-  width: 100%;
-  height: 165px;
-  margin: 0 auto;
-}
-
-h2 {
+.header {
+  color: white;
+  display: flex;
+  flex-direction: row-reverse;
   justify-content: center;
-  z-index: 9999;
-  width: 20px;
-  margin: 0 auto;
-  margin-left: 47.5%;
+  margin: 0;
+  width: 100%;
+  height: 35vh;
+  z-index: 999;
+  background-color: white;
+  background-image: url("/images/oscar-keys-58399-unsplash.jpg");
+  background-size: 150%;
 }
 
-h2 img {
-  width: 35px;
-  -webkit-animation-name: rotate;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-transition-timing-function: linear;
+.header h1 {
+  font-family: 'Heebo', sans-serif;
+  font-size: 50px;
+  margin: 0;
+  text-align: center;
+  padding: 80px;
 }
 
-img:hover {
-  margin: 0 auto;
-  opacity: .7;
+.header p {
+  color: gold;
+  font-family: 'Source Code Pro', monospace;
+  margin-top: 10vh;
+  padding: 30px;
 }
 
-img:active {
-  opacity: 0;
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-@-webkit-keyframes rotate {
-  from {
-    -webkit-transform: rotateY(0deg);
-  }
-  to {
-    -webkit-transform: rotateY(360deg);
-  }
+.one {
+  width: 25vw;
+  height: 70vh;
+  background-color: white;
+  transition: all 250ms;
 }
+
+.one:hover {
+  opacity: .5;
+  background-image: url("/images/proj.jpg");
+  background-size: 150%;
+}
+
+.link1 {
+  font-size: 25px;
+  margin: 0;
+  font-family: 'Heebo', sans-serif;
+  color: black;
+  text-align: center;
+}
+
+.link1 h1 {
+  padding-top: 20vh;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.two {
+  width: 25vw;
+  height: 70vh;
+  background-color: white;
+  transition: all 300ms;
+}
+
+.two:hover {
+  opacity: .5;
+  background-image: url("/images/interv.jpg");
+  background-size: 150%;
+}
+
+.three {
+  width: 25vw;
+  height: 70vh;
+  background-color: white;
+  transition: all 300ms;
+}
+
+.three:hover {
+  opacity: .5;
+  background-image: url("/images/hands.jpg");
+  background-size: 200%;
+}
+
+.four {
+  width: 23.5vw;
+  height: 70vh;
+  background-color: #070605;
+  opacity: .8;
+}
+
+.four h1 {
+  color: white;
+}
+
+.four:hover {
+  opacity: .5;
+}
+
+.footer {
+  font-family: 'Source Code Pro', monospace;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #e0f009;
+  color: black;
+  text-align: center;
+}
+
+/*# sourceMappingURL=entrance.css.map */
 /*# sourceMappingURL=entrance.css.map */
