--- a/css/mymusic.scss
+++ b/css/mymusic.scss
@@ -1,161 +1,37 @@
 body {
-  background-image: url('/images/pattern.png');
-  background-repeat: repeat;
-  background-attachment: fixed;
-  background-color: rgb(1, 30, 48);
-  }
-
-
-.navbar {
-  animation-name: skills;
-        animation-duration: 6s;
-        animation-delay: 0s;
-        animation-fill-mode: forwards;
-  z-index:9999;
-  position:fixed;
-    overflow: hidden;
-    background-color:transparent;
-    font-family: 'Bangers', cursive;
-    border-radius: 10px;
+  font-family: Arial;
+  color: white;
 }
 
-.navbar a {
-    float: left;
-    font-size: 30px;
-    background-color: rgb(12, 2, 11);
-    background-size: 200px;
-    width:128px;
-    height:43px;
-    text-align: center;
-    padding: 36px;
-    text-decoration: none;
-    transition: all 200ms;
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
 }
 
-.navbar a:hover {
-    color:tan;
+.left {
+  left: 0;
+  background-color: #111;
 }
 
-
-
-section{
-  
-  
-  animation-name: skills;
-        animation-duration: 6s;
-        animation-delay: 0s;
-        animation-fill-mode: forwards;
-  position:fixed;  
-  box-shadow: 4px 4px 4px rgba(245, 241, 241, 0.308);
-  background-color: rgb(12, 2, 11);
-  border-radius: 10px;
-  height: 60%;
-  float: left;
-  width:200px;
+.right {
+  right: 0;
+  background-color: red;
 }
 
-p{
-  animation-name: skills;
-        animation-duration: 6s;
-        animation-delay: 0s;
-        animation-fill-mode: forwards;
-  margin:0px;
-  border-bottom: 2px solid rgb(109, 107, 107);
-  font-family: 'Bangers', cursive;;
-  font-size: 18px;
-  color:rgb(221, 235, 31);
-  padding:15px;
-  transition: all .5s;
-  transition-delay: 0s;
-  transition-duration: 1s;
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
-p:hover{
-  background-color:rgba(212, 48, 26, 0.966);
-  
+.centered img {
+  width: 150px;
+  border-radius: 50%;
 }
-
-.block{
-  animation-name: extra;
-  animation-duration: 6s;
-  animation-delay: 0s;
-  animation-fill-mode: forwards;
-  margin:0 auto;
-  width:65%;
-  height:55px;
-  background-color: rgb(253, 197, 13);
-  box-shadow: 4px 4px 4px rgb(19, 11, 11);
-  border:1px solid black;
-  text-align:left;
-  font-family: 'Bangers', cursive;
-  font-size: 52px;
-  padding:10px;
-  border-radius: 80px;
-}
-
-.features ul{
-  
-  animation-name: extra;
-  animation-duration: 6s;
-  animation-delay: 0s;
-  animation-fill-mode: forwards;
-  display:flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-around;
-  margin:20px;
-  margin-left:15%;
-  margin-right:15%;
-  li{
-  border-radius: 20px;
-  list-style: none;
-  width:350px;
-  height:350px;
-  padding:10px;
-  background-color: rgb(4, 6, 10);
-  border:20px double rgb(2, 165, 240);
-  margin:10px;
-  text-align:center;
-  }
-}
-
-li{
-  margin:10px;
-  border-bottom: 2px solid rgb(141, 21, 21);
-  background-size: cover;
-  font-family: 'Bangers', cursive;
-  font-size:25px;
-  color:rgb(45, 241, 10);
-  padding:10px;
-  transition: all 200ms;
-}
-li:hover{
-  margin:10px;
-  border-bottom: 2px solid rgb(19, 11, 11);
-  font-family: 'Bangers', cursive;
-  padding:10px;
-  transition: all 200ms;
-}
-
-@keyframes skills{
-    from{
-      left:-150px;
-      top:0px;
-    }
-    to{
-      left:0px;
-      top:0px;
-    }
-}
-
-
-@keyframes extra{
-  from{
-    opacity: 0;
-  }
-  to{
-    opacity:1;
-  }
-}
-
-  /*# sourceMappingURL=mywebsite.css.map */
