--- a/css/entrance.css
+++ b/css/entrance.css
@@ -2,31 +2,35 @@
 @import url("https://fonts.googleapis.com/css?family=Heebo:700");
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:600");
 body {
-  background-color: #161616;
-  background-size: cover;
-  background-position-y: -190px;
+  background-color: #f1f0df;
+  background-image: url("/images/pattern.png");
   background-attachment: fixed;
-  background-repeat: no-repeat;
+  background-size: 3px;
   margin: 0;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
 .header {
-  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0;
   width: 100%;
   height: 35vh;
   z-index: 999;
-  background-color: white;
-  background-image: url("/images/oscar-keys-58399-unsplash.jpg");
-  background-size: 150%;
+  background-color: #fff643;
 }
 
 .header h1 {
+  color: black;
   font-family: 'Heebo', sans-serif;
   font-size: 50px;
   margin: 0;
@@ -35,25 +39,37 @@ body {
 }
 
 .header p {
-  color: #fd5b5b;
+  font-size: 15px;
+  color: #be0707;
   font-family: 'Source Code Pro', monospace;
   margin-top: 10vh;
   padding: 30px;
 }
 
+.header a {
+  text-decoration: none;
+  color: black;
+}
+
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .one {
-  width: 25vw;
-  height: 70vh;
-  background-color: white;
+  width: 33vw;
+  height: 30vh;
+  background-color: black;
+  -webkit-transition: all 250ms;
   transition: all 250ms;
-  background-image: url("/images/proj.jpg");
-  background-size: 150%;
 }
 
 .one:hover {
@@ -64,12 +80,12 @@ body {
   font-size: 25px;
   margin: 0;
   font-family: 'Heebo', sans-serif;
-  color: #e9e649;
+  color: #fff643;
   text-align: center;
 }
 
 .link1 h1 {
-  padding-top: 20vh;
+  padding-top: 10vh;
   margin: 0;
 }
 
@@ -78,12 +94,11 @@ a {
 }
 
 .two {
-  width: 25vw;
-  height: 70vh;
-  background-color: white;
+  width: 33vw;
+  height: 30vh;
+  background-color: black;
+  -webkit-transition: all 300ms;
   transition: all 300ms;
-  background-image: url("/images/interv.jpg");
-  background-size: 150%;
 }
 
 .two:hover {
@@ -91,27 +106,15 @@ a {
 }
 
 .three {
-  width: 25vw;
-  height: 70vh;
-  background-color: white;
+  width: 33vw;
+  height: 30vh;
+  background-color: black;
+  -webkit-transition: all 300ms;
   transition: all 300ms;
-  background-image: url("/images/hands.jpg");
-  background-size: 200%;
 }
 
 .three:hover {
   opacity: .7;
-}
-
-.four {
-  width: 25vw;
-  height: 70vh;
-  background-color: #070605;
-  opacity: .8;
-}
-
-.four h1 {
-  color: white;
 }
 
 .footer {
@@ -120,7 +123,7 @@ a {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #e0f009;
+  background-color: rgba(212, 209, 209, 0.788);
   color: black;
   text-align: center;
 }
@@ -128,34 +131,61 @@ a {
 .past {
   text-align: center;
   padding: 20px;
-  color: #e2d628;
   font-weight: bold;
   font-size: 24px;
   font-family: 'Heebo', sans-serif;
 }
 
+.past h1 {
+  color: black;
+}
+
 .block {
   border: 2px solid #dadada;
-  width: 850px;
-  background-color: #dadada;
-  height: 500px;
+  width: 750px;
+  background-color: #faf9f9;
+  height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0 auto;
   margin-bottom: 100px;
-  text-align: unset;
+  text-align: justify;
+  padding: 10px;
+  -webkit-box-shadow: 5px 10px 18px #888888;
+          box-shadow: 5px 10px 18px #888888;
 }
 
 .block img {
-  max-width: 300px;
-  min-width: 300px;
+  width: 300px;
+  height: 300px;
 }
 
 .block p {
   font-family: 'Source Code Pro', monospace;
-  padding: 50px;
+  padding: 10px;
+  font-size: 15px;
 }
 
-/*# sourceMappingURL=entrance.css.map */
+.block h1 {
+  font-family: 'Source Code Pro', monospace;
+  padding: 10px;
+  font-size: 25px;
+}
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
 /*# sourceMappingURL=entrance.css.map */
