--- a/css/interviews.css
+++ b/css/interviews.css
@@ -2,29 +2,35 @@
 @import url("https://fonts.googleapis.com/css?family=Heebo:700");
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:600");
 body {
-  background-color: rgb(241, 240, 223);
-  background-image: url('/images/pattern.png');
-  background-attachment: fixed;
+  background-color: #f1f0df;
+  background-image: url("/images/pattern.png");
   background-size: 3px;
+  background-attachment: fixed;
   margin: 0;
   overflow-y: scroll;
   overflow-x: hidden;
-
 }
 
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0;
   width: 100%;
   height: 35vh;
   z-index: 999;
-  background-color: rgb(255, 246, 67);
+  background-color: #fff643;
 }
 
 .header h1 {
-  color:rgb(0, 0, 0);
+  color: black;
   font-family: 'Heebo', sans-serif;
   font-size: 50px;
   margin: 0;
@@ -33,46 +39,49 @@ body {
 }
 
 .header p {
-  font-size:15px;
-  color: rgb(190, 7, 7);
+  font-size: 15px;
+  color: #be0707;
   font-family: 'Source Code Pro', monospace;
   margin-top: 10vh;
   padding: 30px;
 }
-.header a {
 
+.header a {
   text-decoration: none;
   color: black;
-
 }
 
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .one {
   width: 33vw;
   height: 30vh;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
+  -webkit-transition: all 250ms;
   transition: all 250ms;
 }
 
 .one:hover {
-  // background-color: rgba(241, 240, 223, 0.835);
   opacity: .7;
-  
 }
 
 .link1 {
   font-size: 25px;
   margin: 0;
   font-family: 'Heebo', sans-serif;
-  color: rgb(255, 246, 67);
+  color: #fff643;
   text-align: center;
-  // -webkit-text-stroke: 3px rgb(0, 0, 2); 
-// text-stroke: 4px navy;
 }
 
 .link1 h1 {
@@ -88,31 +97,23 @@ a {
   width: 33vw;
   height: 30vh;
   background-color: black;
-  transition: all 300ms;
-}
-
-.two:hover {
   opacity: .7;
-  // background-color: rgba(241, 240, 223, 0.835);
 }
 
 .three {
   width: 33vw;
   height: 30vh;
   background-color: black;
+  -webkit-transition: all 300ms;
   transition: all 300ms;
 }
 
 .three:hover {
   opacity: .7;
-  // background-color: rgba(241, 240, 223, 0.835);
 }
 
-
-
-
 .footer {
-    font-family: 'Source Code Pro', monospace;
+  font-family: 'Source Code Pro', monospace;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -122,57 +123,51 @@ a {
   text-align: center;
 }
 
-
-.past{
+.past {
   text-align: center;
   padding: 20px;
   font-weight: bold;
-  font-size:24px;
+  font-size: 24px;
   font-family: 'Heebo', sans-serif;
-  h1{
-    color:black;
-  }
 }
 
-.block{
-  border:2px solid rgb(218, 218, 218);
-  width:750px;
-  background-color: rgb(250, 249, 249);
-  height:300px;
-  display:flex;
-  flex-direction: row;
-  justify-content: center;
+.past h1 {
+  color: black;
+}
+
+.block {
+  width: 400px;
+  height: 400px;
+  background-color: #faf9f9;
   margin: 0 auto;
-  margin-bottom:100px;
-  text-align: justify;
-  // border: 1px solid;
-    padding: 10px;
-    box-shadow: 5px 10px 18px #888888;
-img{
-  width: 300px;
-  height: 300px;
-  
-}
-p{
-  font-family: 'Source Code Pro', monospace;
-  padding:10px;
-  font-size:15px;
-}
-h1{
-  font-family: 'Source Code Pro', monospace;
-  padding:10px;
-font-size: 25px;
-}
+  margin-bottom: 100px;
+  -webkit-box-shadow: 5px 10px 18px #888888;
+          box-shadow: 5px 10px 18px #888888;
 }
 
+.block img {
+  width: 400px;
+  height: 400px;
+}
 
+.left {
+  margin-left: 100px;
+  float: left;
+  width: 40vw;
+}
+
+.right {
+  margin-right: 100px;
+  float: right;
+  width: 40vw;
+}
 
 body::-webkit-scrollbar {
   width: 1em;
 }
 
-
 body::-webkit-scrollbar-thumb {
-background-color: darkgrey;
-outline: 1px solid slategrey;
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
+/*# sourceMappingURL=interviews.css.map */
