--- a/css/interviews.scss
+++ b/css/interviews.scss
@@ -4,8 +4,8 @@
 body {
   background-color: rgb(241, 240, 223);
   background-image: url('/images/pattern.png');
-  background-attachment: fixed;
   background-size: 3px;
+  background-attachment: fixed;
   margin: 0;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -21,6 +21,7 @@ body {
   height: 35vh;
   z-index: 999;
   background-color: rgb(255, 246, 67);
+  
 }
 
 .header h1 {
@@ -39,6 +40,7 @@ body {
   margin-top: 10vh;
   padding: 30px;
 }
+
 .header a {
 
   text-decoration: none;
@@ -52,11 +54,13 @@ body {
   justify-content: center;
 }
 
+
 .one {
   width: 33vw;
   height: 30vh;
   background-color: rgb(0, 0, 0);
   transition: all 250ms;
+  // opacity: .7;
 }
 
 .one:hover {
@@ -88,11 +92,12 @@ a {
   width: 33vw;
   height: 30vh;
   background-color: black;
-  transition: all 300ms;
+  // transition: all 300ms;
+  opacity: .7;
 }
 
 .two:hover {
-  opacity: .7;
+  // opacity: .7;
   // background-color: rgba(241, 240, 223, 0.835);
 }
 
@@ -135,35 +140,32 @@ a {
 }
 
 .block{
-  border:2px solid rgb(218, 218, 218);
-  width:750px;
+  width:400px;
+  height:400px;
   background-color: rgb(250, 249, 249);
-  height:300px;
-  display:flex;
-  flex-direction: row;
-  justify-content: center;
   margin: 0 auto;
   margin-bottom:100px;
-  text-align: justify;
-  // border: 1px solid;
-    padding: 10px;
     box-shadow: 5px 10px 18px #888888;
 img{
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   
 }
-p{
-  font-family: 'Source Code Pro', monospace;
-  padding:10px;
-  font-size:15px;
 }
-h1{
-  font-family: 'Source Code Pro', monospace;
-  padding:10px;
-font-size: 25px;
+
+.left{
+  margin-left: 100px;
+  float: left;
+  width:40vw;
 }
+
+.right{
+  margin-right: 100px;
+  float: right;
+  width:40vw;
 }
+
+
 
 
 
