--- a/css/projects.scss
+++ b/css/projects.scss
@@ -4,8 +4,8 @@
 body {
   background-color: rgb(241, 240, 223);
   background-image: url('/images/pattern.png');
-  background-attachment: fixed;
   background-size: 3px;
+  background-attachment: fixed;
   margin: 0;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -24,7 +24,6 @@ body {
 }
 
 .header h1 {
-  color:rgb(0, 0, 0);
   font-family: 'Heebo', sans-serif;
   font-size: 50px;
   margin: 0;
@@ -39,11 +38,12 @@ body {
   margin-top: 10vh;
   padding: 30px;
 }
+
 .header a {
 
-  text-decoration: none;
-  color: black;
-
+    text-decoration: none;
+    color: black;
+  
 }
 
 .container {
@@ -56,12 +56,13 @@ body {
   width: 33vw;
   height: 30vh;
   background-color: rgb(0, 0, 0);
-  transition: all 250ms;
+  // transition: all 250ms;
+  opacity: .7;
 }
 
 .one:hover {
   // background-color: rgba(241, 240, 223, 0.835);
-  opacity: .7;
+  // opacity: .7;
   
 }
 
@@ -135,7 +136,7 @@ a {
 }
 
 .block{
-  border:2px solid rgb(218, 218, 218);
+  // border:2px solid rgb(218, 218, 218);
   width:750px;
   background-color: rgb(250, 249, 249);
   height:300px;
@@ -146,7 +147,7 @@ a {
   margin-bottom:100px;
   text-align: justify;
   // border: 1px solid;
-    padding: 10px;
+    // padding: 10px;
     box-shadow: 5px 10px 18px #888888;
 img{
   width: 300px;
@@ -164,6 +165,7 @@ h1{
 font-size: 25px;
 }
 }
+
 
 
 
