--- a/css/submit.css
+++ b/css/submit.css
@@ -63,13 +63,6 @@ body {
           justify-content: center;
 }
 
-.one {
-  width: 33vw;
-  height: 30vh;
-  background-color: black;
-  opacity: .7;
-}
-
 .link1 {
   font-size: 25px;
   margin: 0;
@@ -85,6 +78,18 @@ body {
 
 a {
   text-decoration: none;
+}
+
+.one {
+  width: 33vw;
+  height: 30vh;
+  background-color: black;
+  -webkit-transition: all 250ms;
+  transition: all 250ms;
+}
+
+.one:hover {
+  opacity: .7;
 }
 
 .two {
@@ -103,11 +108,6 @@ a {
   width: 33vw;
   height: 30vh;
   background-color: black;
-  -webkit-transition: all 300ms;
-  transition: all 300ms;
-}
-
-.three:hover {
   opacity: .7;
 }
 
@@ -135,33 +135,38 @@ a {
 }
 
 .block {
-  margin: 0;
-  width: 400px;
-  height: 400px;
+  font-family: 'Source Code Pro', monospace;
+  width: 750px;
   background-color: #faf9f9;
+  height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0 auto;
   margin-bottom: 100px;
-}
-
-.block h1 {
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 20px;
+  text-align: justify;
   padding: 10px;
-  text-align: center;
-  background-color: yellow;
-  margin: 0;
 }
 
-.left {
-  margin-left: 100px;
-  float: left;
-  width: 40vw;
+.block p {
+  font-family: 'Source Code Pro', monospace;
+  padding: 10px;
+  font-size: 15px;
 }
 
-.right {
-  margin-right: 100px;
-  float: right;
-  width: 40vw;
+.send {
+  font-weight: bold;
+  padding: 10px;
+  border: none;
+  background-color: #eb1414;
+  color: white;
 }
 
 body::-webkit-scrollbar {
@@ -172,4 +177,4 @@ body::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 1px solid slategrey;
 }
-/*# sourceMappingURL=projects.css.map */
+/*# sourceMappingURL=submit.css.map */
