--- a/css/submit.scss
+++ b/css/submit.scss
@@ -52,19 +52,7 @@ body {
   justify-content: center;
 }
 
-.one {
-  width: 33vw;
-  height: 30vh;
-  background-color: rgb(0, 0, 0);
-  // transition: all 250ms;
-  opacity: .7;
-}
 
-.one:hover {
-  // background-color: rgba(241, 240, 223, 0.835);
-  // opacity: .7;
-  
-}
 
 .link1 {
   font-size: 25px;
@@ -85,6 +73,20 @@ a {
   text-decoration: none;
 }
 
+.one {
+    width: 33vw;
+    height: 30vh;
+    background-color: rgb(0, 0, 0);
+    transition: all 250ms;
+    
+  }
+  
+  .one:hover {
+    // background-color: rgba(241, 240, 223, 0.835);
+    opacity: .7;
+    
+  }
+
 .two {
   width: 33vw;
   height: 30vh;
@@ -101,14 +103,9 @@ a {
   width: 33vw;
   height: 30vh;
   background-color: black;
-  transition: all 300ms;
-}
-
-.three:hover {
   opacity: .7;
-  // background-color: rgba(241, 240, 223, 0.835);
+//   transition: all 300ms;
 }
-
 
 
 
@@ -136,35 +133,34 @@ a {
 }
 
 .block{
-  margin: 0;
-  width:400px;
-  height:400px;
-  background-color: rgb(250, 249, 249);
-  margin: 0 auto;
-  margin-bottom:100px;
-h1{
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 20px;
-  padding: 10px;
-  text-align: center;
-  background-color: yellow;
-  margin: 0;
-}
-}
-
-.left{
-  margin-left: 100px;
-  float: left;
-  width:40vw;
-}
+    
+  font-family: 'Source Code Pro', monospace;
+    width:750px;
+    background-color: rgb(250, 249, 249);
+    height:300px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    margin-bottom:100px;
+    text-align: justify;
+    // border: 1px solid;
+      padding: 10px;
+  p{
+    font-family: 'Source Code Pro', monospace;
+    padding:10px;
+    font-size:15px;
+  }
+  }
 
 
-.right{
-  margin-right: 100px;
-  float: right;
-  width:40vw;
+  .send{ 
+      font-weight: bold;
+      padding:10px;
+      border: none;
+    background-color: rgb(235, 20, 20);
+color: white;
 }
-
 
 
 
