--- a/css/projects.css
+++ b/css/projects.css
@@ -148,7 +148,7 @@ a {
   font-size: 20px;
   padding: 10px;
   text-align: center;
-  background-color: yellow;
+  background-color: #f8f80b;
   margin: 0;
 }
 
