--- a/css/projects.scss
+++ b/css/projects.scss
@@ -147,7 +147,7 @@ h1{
   font-size: 20px;
   padding: 10px;
   text-align: center;
-  background-color: yellow;
+  background-color: rgb(248, 248, 11);
   margin: 0;
 }
 }
